<resources>
    <string name="app_name">Dance Fusion Grafik</string>
    <string name="action_settings">Odśwież</string>
    <string name="action_filter">Filtruj</string>
    <string name="day">Dzień</string>
    <string name="time_from">Od</string>
    <string name="time_to">Do</string>
    <string name="title_activity_lesson_details">LessonDetailsActivity</string>
    <string name="lesson_details">Szczegóły zajęć</string>
    <string name="level">Poziom</string>
    <string name="instructor">Instruktor</string>
    <string name="notes">Uwagi</string>
    <string name="enrollment">Zapisy</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="filter">Filtruj</string>
    <string name="time">Godzina</string>
    <string name="course">Kurs</string>

    <string-array name="days">
        <item>Wszystkie dni</item>
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string-array name="hours">
        <item>Dowolna</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="courses">
        <item>Dowolny</item>
        <item>Bachata Solo</item>
        <item>Bachata Styling</item>
        <item>Bachata W Parach</item>
        <item>Bachata W Parach Single</item>
        <item>Dancehall</item>
        <item>Dancehall/Twerk</item>
        <item>Formacja Dancehall</item>
        <item>Hip Hop</item>
        <item>Izolacje/Body Movement</item>
        <item>Joga</item>
        <item>Joga Kundalini</item>
        <item>Latino Solo</item>
        <item>Pierwszy Taniec</item>
        <item>Project Choreo: Bachata</item>
        <item>Project Choreo: Street Dance</item>
        <item>Salsa Solo</item>
        <item>Salsa W Parach</item>
        <item>Sexy Dance</item>
        <item>Taniec Brzucha</item>
        <item>Taniec Jazzowy</item>
        <item>Taniec Użytkowy</item>
        <item>Twerk</item>
        <item>West Coast Swing</item>
        <item>West Coast Swing Technika</item>
    </string-array>
</resources>