<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">
    <TextView
        style="@style/FilterHeader"
        android:text="@string/day"/>
    <Spinner
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/days"/>
    <TextView
        style="@style/FilterHeader"
        android:text="@string/time"/>
    <Spinner
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/hours"/>
    <TextView
        style="@style/FilterHeader"
        android:text="@string/course"/>
    <Spinner
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/courses"/>
</LinearLayout>